--- a/cities/templates/cities/base.html
+++ b/cities/templates/cities/base.html
@@ -8,8 +8,9 @@
 
 </head>
 <body>
-<header><h1>City information</h1></header>
-
+<div class="alert alert-primary" role="alert">
+<header><h1 align="center">City information</h1></header>
+</div>
  <ul>
      <li>{% block content %}{%endblock%}</li>
  </ul>
